--- a/lighting.html
+++ b/lighting.html
@@ -122,7 +122,15 @@
                 </div>
             </div>
         </div>
+
+        <div class="row justify-content-around">
+            <div class="col-2">&nbsp;</div>
+        </div>
+        <div class="row justify-content-around">
+            <div class="col-2">&nbsp;</div>
+        </div>
     </div>
+
 
     <div class="modal" id="imageModal" tabindex="-1" aria-labelledby="imagePopup" aria-hidden="true">
         <div class="modal-dialog model-dialog-centered modal-xl">
