--- a/sound.html
+++ b/sound.html
@@ -136,6 +136,13 @@
                 </div>
             </div>
         </div>
+
+        <div class="row justify-content-around">
+            <div class="col-2">&nbsp;</div>
+        </div>
+        <div class="row justify-content-around">
+            <div class="col-2">&nbsp;</div>
+        </div>
     </div>
 
     <!--
